--- a/intaglio-2017-v2/index.html
+++ b/intaglio-2017-v2/index.html
@@ -85,6 +85,8 @@
 		</nav>
 		<!-- end navigation -->
 
+		<div class="parallax"></div>
+
     	<!-- start home -->
     	<section id="home">
     		<div class="container" id = 'slideshow'>
