--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -89,6 +89,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Gallery</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#sponsors">Sponsors</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
+                                <li class="js_nav-item nav-item" style = 'background-color:powderblue; cursor:pointer'><a class="nav-item-child nav-item-hover" href="brochure/brochure.pdf" download="brochure.pdf">Brochure</a></li>
                                 <li id = 'regBtn' class="js_nav-item nav-item" style = 'background-color:#ed5a6a; cursor:pointer'><a class="nav-item-child nav-item-hover">Register/Sign In</a></li>
                             </ul>
                         </div>
