shifted team photos

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -960,7 +960,33 @@
                         </div>
                     </div>
                     <!--// end row -->
-
+                    <div class="row" style = 'margin-bottom: 100px'>
+                      <div class="col-sm-3">
+                        <div class = 'team-label' style='margin-left:423px'>
+                          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                              <div class="front">
+                                <img class="swiper-clients-img caption__media" src="img/team/abul.JPG" alt="Clients Logo">
+                                <div class="text-center member-info1" style="background: white;">
+                                    <h4 class="title-four member-name">Nalband Abul Aala Abubakkar</h4>
+                                    <div class="member-role">Overall Coordinator</div>
+                                </div>
+                              </div>
+                              <div class="back">
+                                    <ul class="list-unstyled contact-list" style = 'text-align:center'>
+                                        <li><i class="margin-r-10 color-base icon-call-out"></i>9769972657</li>
+                                        <li><i class="margin-r-10 color-base icon-envelope"></i> nalbandaa2018@email.iimcal.ac.in </li>
+                                    </ul>
+                                    <div class="text-center member-info1" style="background: white;margin-top:110px;">
+                                        <h4 class="title-four member-name">Nalband Abul Aala Abubakkar</h4>
+                                        <div class="member-role">Overall Coordinator</div>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                     <div class="row" style = 'margin-bottom: 100px'>
                       <div class="col-sm-3">
                         <div class = 'team-label'>
@@ -969,8 +995,8 @@
                               <div class="front">
                                 <img class="swiper-clients-img caption__media" src="img/team/abhishek.JPG" alt="Clients Logo">
                                 <div class="text-center member-info1" style="background: white;">
-                                    <h4 class="title-four member-name">Aishwarya Agarwal</h4>
-                                    <div class="member-role">Overall Coordinator</div>
+                                    <h4 class="title-four member-name">Abhishek Paul</h4>
+                                    <div class="member-role">Events Head</div>
                                 </div>
                               </div>
                               <div class="back">
@@ -980,8 +1006,8 @@
                                         <li><i class="margin-r-10 color-base icon-envelope"></i> abhishekp2018@email.iimcal.ac.in </li>
                                     </ul>
                                     <div class="text-center member-info1-flip" style="background: white;">
-                                        <h4 class="title-four member-name">Aishwarya Agarwal</h4>
-                                        <div class="member-role">Overall Coordinator</div>
+                                        <h4 class="title-four member-name">Abhishek Paul</h4>
+                                        <div class="member-role">Events Head</div>
                                     </div>
                               </div>
                             </div>
@@ -1043,21 +1069,21 @@
                           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                               <div class="front">
-                                <img class="swiper-clients-img caption__media" src="img/team/abul.JPG" alt="Clients Logo">
+                                <img class="swiper-clients-img caption__media" src="img/team/swaraj.JPG" alt="Clients Logo">
                                 <div class="text-center member-info1" style="background: white;">
-                                    <h4 class="title-four member-name">Nalband Abul Aala Abubakkar</h4>
-                                    <div class="member-role">Overall Coordinator</div>
+                                    <h4 class="title-four member-name">Swaraj Rathore</h4>
+                                    <div class="member-role">Logistics Head</div>
                                 </div>
                               </div>
                               <div class="back">
-                                    <ul class="list-unstyled contact-list" style = 'text-align:center'>
-                                        <li><i class="margin-r-10 color-base icon-call-out"></i>9769972657</li>
-                                        <li><i class="margin-r-10 color-base icon-envelope"></i> nalbandaa2018@email.iimcal.ac.in </li>
-                                    </ul>
-                                    <div class="text-center member-info1" style="background: white;margin-top:110px;">
-                                        <h4 class="title-four member-name">Nalband Abul Aala Abubakkar</h4>
-                                        <div class="member-role">Overall Coordinator</div>
-                                    </div>
+                                <ul class="list-unstyled contact-list" style = 'text-align:center'>
+                                    <li><i class="margin-r-10 color-base icon-call-out"></i>8602068852</li>
+                                    <li><i class="margin-r-10 color-base icon-envelope"></i> swarajr2018@email.iimcal.ac.in </li>
+                                </ul>
+                                <div class="text-center member-info1-flip" style="background: white;margin-top: 128px;">
+                                    <h4 class="title-four member-name">Swaraj Rathore</h4>
+                                    <div class="member-role">Logistics Head</div>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -1160,33 +1186,6 @@
                                         <h4 class="title-four member-name">Sumit Kathuria</h4>
                                         <div class="member-role">Events Head</div>
                                     </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row" style = 'margin-bottom: 100px'>
-                      <div class="col-sm-3">
-                        <div class = 'team-label'>
-                          <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                            <div class="flipper">
-                              <div class="front">
-                                <img class="swiper-clients-img caption__media" src="img/team/swaraj.JPG" alt="Clients Logo">
-                                <div class="text-center member-info1" style="background: white;">
-                                    <h4 class="title-four member-name">Swaraj Rathore</h4>
-                                    <div class="member-role">Logistics Head</div>
-                                </div>
-                              </div>
-                              <div class="back">
-                                <ul class="list-unstyled contact-list" style = 'text-align:center'>
-                                    <li><i class="margin-r-10 color-base icon-call-out"></i>8602068852</li>
-                                    <li><i class="margin-r-10 color-base icon-envelope"></i> swarajr2018@email.iimcal.ac.in </li>
-                                </ul>
-                                <div class="text-center member-info1-flip" style="background: white;margin-top: 128px;">
-                                    <h4 class="title-four member-name">Swaraj Rathore</h4>
-                                    <div class="member-role">Logistics Head</div>
-                                </div>
                               </div>
                             </div>
                           </div>
