logo for desktop

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -171,7 +171,7 @@
                                 <!-- <h2 style='color:white'>INTAGLIO OVER THE YEARS</h2> -->
                                 <!-- <br/> -->
                                 <!-- <p style='color:white' >Intaglio is structured to comprise competitive events across various spheres of management such as Finance, Marketing, Policy, Strategy, Operations and Flagship domains with prizes worth more than INR 15 lakhs and speaker sessions on various themes.</p> -->
-                                <img src = 'img/slide_image/intag_history.jpg' id = 'slide-img' width='450px'/>
+                                <img class='img-responsive' src = 'img/slide_image/intag_history.jpg' id = 'slide-img'/>
                             </div>
                             <!-- <a href="#" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">Explore</a> -->
                         </div>
@@ -421,12 +421,12 @@
                       <h4 class="active intag-event-section-h4">Synergize</h4>
                       <div class='intage-event-section-ul'>
                           <blockquote>
-                            <!-- <em>“A hero is born among a hundred, a wise man is found among a thousand, but an accomplished one might not be found even among a hundred thousand men.</em><br/><span class='author-right'> - Plato</span> -->
-                          </blockquote>
-                          <!-- <img src = 'img/events/olympus/olympus1.jpg' class='event-img img-responsive'></img> -->
-                          <!-- <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>The different facets of management have their own challenges and hurdles, but it takes a true leader to master all of them.
-                            The flagship event of Intaglio, Olympus will be the ultimate test for an individual through gruelling rounds of finance, strategy, marketing, analytics amongst other facets of management. Olympus is a hunt to glorify the one true leader from a galaxy of bright minds in the B-schools across the globe.
-                            Victory belongs to the most persevering, with a grit to shine across every dimension. An ultimate conglomeration of thrill, tingle & treat, Olympus will make a run at your swagger and smarts.</p> -->
+                            <em>“A hero is born among a hundred, a wise man is found among a thousand, but an accomplished one might not be found even among a hundred thousand men.</em><br/><span class='author-right'> - Plato</span>
+                            </blockquote>
+                            <img src = 'img/events/olympus/olympus1.jpg' class='event-img img-responsive'></img>
+                            <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>The different facets of management have their own challenges and hurdles, but it takes a true leader to master all of them.
+                              The flagship event of Intaglio, Olympus will be the ultimate test for an individual through gruelling rounds of finance, strategy, marketing, analytics amongst other facets of management. Olympus is a hunt to glorify the one true leader from a galaxy of bright minds in the B-schools across the globe.
+                              Victory belongs to the most persevering, with a grit to shine across every dimension. An ultimate conglomeration of thrill, tingle & treat, Olympus will make a run at your swagger and smarts.</p>
                           <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('synergize')">Register</button>
                           <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/synergize.html' style='color:black'>More Details</a></button>
                       </div>
@@ -451,10 +451,10 @@
                       <h4 class='intag-event-section-h4'>DataPlay</h4>
                       <div class='intage-event-section-ul'>
                         <blockquote>
-                          <!-- <em>In this life we cannot change great things, we can only do small things with great love</em><br/><span class='author-right'> – Mother Teresa</span> -->
+                          <em>In this life we cannot change great things, we can only do small things with great love</em><br/><span class='author-right'> – Mother Teresa</span>
                         </blockquote>
-                        <!-- <img src = 'img/events/antyodaya/antyodaya1.jpg' class='event-img img-responsive'></img> -->
-                        <!-- <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'> An event that focuses on solving community issues through innovation with commercial potential.  Participants would be expected to brainstorm and bring innovative ideas about the functioning of a not-for-profit organization. Apply your managerial expertise to solve live problems that such organisations are facing. You would be tested for understanding of the issue, stakeholders, corresponding social impacts, among other things. </p> -->
+                        <img src = 'img/events/antyodaya/antyodaya1.jpg' class='event-img img-responsive'></img>
+                        <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'> An event that focuses on solving community issues through innovation with commercial potential.  Participants would be expected to brainstorm and bring innovative ideas about the functioning of a not-for-profit organization. Apply your managerial expertise to solve live problems that such organisations are facing. You would be tested for understanding of the issue, stakeholders, corresponding social impacts, among other things. </p>
                         <!-- <a href = 'mailto:social@email.iimcal.ac.in'><i class="fa fa-envelope pull-right margin-r-20" style='cursor:pointer' aria-hidden="true"></i></a> -->
                         <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('dataplay')">Register</button>
                         <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/dataplay.html' style='color:black'>More Details</a></button>
@@ -475,6 +475,32 @@
                           <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/chanakyaniti.html' style='color:black'>More Details</a></button>
                       </div>
                       <h4 class='intag-event-section-h4'>IIMC MUN</h4>
+                      <div class='intage-event-section-ul'>
+                        <blockquote>
+                          <em>People forget. We are here to act, We are here to deliver results. We are agents of change. Our job is to change the UN and through it, the world.</em><br/><span class='author-right'>- Ban Ki Moon</span>
+                        </blockquote>
+                        <img src = 'img/events/mun/mun1.jpg' class='event-img img-responsive'></img>
+                        <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>The IIM Calcutta Model United Nations seeks to test the diplomacy & policy making ability of participants in various international and national current affairs. The third edition will continue in bringing out the discussion of contemporary issues like poverty, effect of global warming and even political issues like Brexit, Trump Rule and its implications to the forefront encouraging the participants to come up with sustainable solutions.</p>
+                        <a href = 'mailto:iimcmun@email.iimcal.ac.in'><i class="fa fa-envelope pull-right margin-r-20" style='cursor:pointer' aria-hidden="true"></i></a>
+                        <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('mun')">Register</button>
+                        <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/mun.html' style='color:black'>More Details</a></button>
+                      </div>
+                  </div>
+                </div>
+                <div id = "content8" class='content-child'>
+                    <div class='intag-event-section' style='position:relative;'>
+                      <h4 class="active intag-event-section-h4">Law of the Land</h4>
+                      <div class='intage-event-section-ul'>
+                          <blockquote>
+                            <em>Purity of the speech, of the mind, of the senses, and of the compassionate heart are needed by one who desires to rise to the divine platform.</em><br/><span class='author-right'> – Chanakya</span>
+                          </blockquote>
+                          <img src = 'img/events/chanakya/chanakya1.jpg' class='event-img img-responsive'></img>
+                          <p style = 'padding: 10px; margin: 20px 10px 10px 10px;font-size: 15px;text-align: justify;color:black;font-weight: 500;'>The 21st century would belong to India and China is an oft-quoted statement but to prove it correct would require innovative and robust strategies formulated as well as executed. ChanakyaNITI provides the platform to enable the young minds of the country to put themselves into the shoes of the policymakers and provide viewpoints on policies like Employment, Cooperative federalism, Security policies, External affairs, Sustainable development, Farm Crisis, Railways to assist the government of the day.</p>
+                          <a href = 'mailto:chanakyaniti@email.iimcal.ac.in'><i class="fa fa-envelope pull-right margin-r-20" style='cursor:pointer' aria-hidden="true"></i></a>
+                          <button class='btn btn-default pull-right margin-r-20' style='border: 3px solid black;' onclick="registerEvent('chanakyaniti')">Register</button>
+                          <button class='btn btn-info pull-right margin-r-20' style='border-radius: 5px;padding: 8px 12px;'><a href='events/chanakyaniti.html' style='color:black'>More Details</a></button>
+                      </div>
+                      <h4 class='intag-event-section-h4'>Oikonomics</h4>
                       <div class='intage-event-section-ul'>
                         <blockquote>
                           <em>People forget. We are here to act, We are here to deliver results. We are agents of change. Our job is to change the UN and through it, the world.</em><br/><span class='author-right'>- Ban Ki Moon</span>
@@ -1094,13 +1120,17 @@
             <!-- Copyright -->
             <div class="content container">
                 <div class="row justify-content-md-center">
-                    <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail" style='display:flex; justify-content:center'>
-                      <a href='https://www.iimcal.ac.in/' target = '_blank'><img class="footer-logo small-screen" src="img/iimc.png" alt="IIMC"></a>
-                      <a href='https://www.iimcal.ac.in/' target = '_blank'><img class="footer-logo large-screen" src="img/imagesforwebsite/a_2x.png" alt="IIMC"></a>
+                    <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail">
+                      <a href='https://www.iimcal.ac.in/' target = '_blank'><img class="footer-logo small-screen" src="img/imagesforwebsite/Image.png" alt="IIMC"></a>
+                      <a href='https://www.iimcal.ac.in/' target = '_blank'><img class="footer-logo large-screen" src="img/imagesforwebsite/Image.png" alt="IIMC"></a>
                         <!-- <p><a href='https://www.iimcal.ac.in/' target = '_blank'>Indian Institute of Management, Calcutta </a><br/>
                         Joka, Kolkata <br/> West Bengal (700104)</p> -->
                     </div>
-                    <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail">
+                    <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail large-screen">
+                    </div>
+                    <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail large-screen">
+                    </div>
+                    <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail large-screen">
                     </div>
                     <div class="col-xs-12 col-sm-3 col-lg-4 footer-detail">
                         <p class="margin-b-0"><span style = 'font-weight:bold'> IIM Calcutta <span> &nbsp;&nbsp;&nbsp;&nbsp; <a href = 'mailto:intaglio@email.iimcal.ac.in'>intaglio@email.iimcal.ac.in</a></p>
@@ -1109,9 +1139,6 @@
                         <i><a href="#" class="fa fa-facebook"></a></i>
                         <i><a href="#" class="fa fa-instagram"></a></i>
                     </div>
-                </div>
-                <div class="row">
-
                 </div>
                 <!-- // end row -->
             </div>
