add active class to event

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1653,8 +1653,12 @@
           });
           tabParentHeight();
 
-          displayTabNone = function() {
+          displayTabNoneSmall = function() {
             $('.content-child-small-screen').css('display','none')
+          }
+
+          displayTabNone = function() {
+            $('.content-child').css('display','none')
           }
 
           changeTab = function(eventName) {
