add active class to event

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -1712,7 +1712,7 @@
           }
 
           changeTabSmallScreen = function(eventName) {
-            displayTabNone()
+            displayTabNoneSmall()
             switch(eventName) {
               case 'marketing' : $('#content1-small-screen').css('display','block')
                                 break;
